--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ env_logger = "0.11.5"
 notify-rust = "4.11.3"
 reqwest = { version = "0.12.8", features = ["json"] }
 tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
+uuid = { version = "1.10.0", features = ["v4"] }
