--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ serde = { version = "1.0", features = ["derive"]}
 serde_json = "1.0"
 log = "0.4.22"
 env_logger = "0.11.5"
-notify-rust = "4.11.3"
 reqwest = { version = "0.12.8", features = ["json"] }
-tokio = { version = "1.40.0", features = ["rt-multi-thread"] }
+tokio = { version = "1.40.0", features = ["rt-multi-thread", "rt", "macros"] }
 uuid = { version = "1.10.0", features = ["v4","serde"] }
+warp = { version = "0.4.2", features = ["server"] }
